tests/fixtures/invalid/float_in_int.py
# Cannot use 'in' with Float and Int
x: bool = 1.0 in 1
